Bug 688467 - pdfwrite device creates incorrect PDF from EPS with CIDFont
Summary: pdfwrite device creates incorrect PDF from EPS with CIDFont
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.50
Hardware: All All
: P1 normal
Assignee: leonardo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-21 10:18 UTC by Raph Levien
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer: 710
Word Size: ---


Attachments
patch1.txt (1.99 KB, patch)
2005-12-22 08:57 UTC, leonardo
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Raph Levien 2005-12-21 10:18:57 UTC
I have a new problem with GS's pdfwrite device. The EPS contains a CID Font
which becomes defect in the PDF. Please have a look at this.
Comment 1 Raph Levien 2005-12-21 10:20:41 UTC
Created attachment 1879 [details]
1243805101.pdf - result from conversion
Comment 2 Raph Levien 2005-12-21 10:21:30 UTC
Created attachment 1880 [details]
1243805101_1.1.eps - original EPS file
Comment 3 leonardo 2005-12-21 15:55:01 UTC
I can observe 2 problems :
1. Acrobat 7 reports an invalid FontBBox.
2. Font size appears wrong when PDF is generated with gs8.51, but it is correct 
when generating with gs8.52
Comment 4 leonardo 2005-12-22 08:57:41 UTC
Created attachment 1888 [details]
patch1.txt

Patch for problem 1 known as 
http://ghostscript.com/pipermail/gs-cvs/2005-April/005492.html	
(IM1282)
Comment 5 leonardo 2005-12-22 08:58:37 UTC
Oops, it is for problem 2. Problem 1 needs a new fix.
Comment 6 leonardo 2005-12-22 10:50:42 UTC
Patch to HEAD for the problem 1 :
http://ghostscript.com/pipermail/gs-cvs/2005-December/005864.html
See also comments 5,4.