Fix (pdfwrite) : CID fonts got incorrect FontBBox.

DETAILS :

Bug 688467 "pdfwrite device creates incorrect PDF from EPS with CIDFont".
This fixes the 1st part of the bug 688467.
See the bug about the 2nd part.

EXPECTED DIFFERENCES :

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6240 a1074d23-0009-0410-80fe-cf8c14f379e6